--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "baguettebox.js": "^1.11.1",
     "core-js": "^3.6.5",
     "v-autocomplete": "^1.8.2",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "vuesax": "^3.12.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
