--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "v-autocomplete": "^1.8.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuesax": "^3.12.2"
+    "vuesax": "^3.12.2",
+    "vuex": "^4.0.2",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
