--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.24.0",
     "baguettebox.js": "^1.11.1",
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.7",
     "v-autocomplete": "^1.8.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
