--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 
-VUE_APP_API_URL=https://eventmovile.test/api/v1/
-VUE_APP_WS_URL=https://eventmovile.test
+VUE_APP_API_URL=https://backend-eventmovile.aicode-test.art/api/v1/
+VUE_APP_WS_URL=https://backend-eventmovile.aicode-test.art
 VUE_APP_URL_FRONT=http://localhost:8081/
 VUE_APP_WS_PORT=443
 VUE_APP_WS_ENCRYPTED=true
-VUE_APP_ZOOM_IFRAME=https://eventmovile.test/api/v1/
+VUE_APP_ZOOM_IFRAME=https://backend-eventmovile.aicode-test.art/api/v1/
