--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "core-js": "^3.6.5",
     "dayjs": "^1.10.7",
     "v-autocomplete": "^1.8.2",
+    "vee-validate": "^3.4.14",
     "vue": "^3.0.0",
+    "vue-axios": "^3.4.0",
+    "vue-loading-overlay": "^5.0.3",
     "vue-router": "^4.0.0-0",
     "vuesax": "^4.0.1-alpha.25",
     "vuex": "^4.0.2",
