--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "v-autocomplete": "^1.8.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue3-dropzone": "0.0.7",
     "vuesax": "^4.0.1-alpha.25",
     "vuex": "^4.0.2",
     "vuex-persist": "^3.1.3"
