--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^3.0.0",
     "vue-axios": "^3.4.0",
     "vue-loading-overlay": "^5.0.3",
+    "vue-qr": "^3.2.4",
     "vue-router": "^4.0.0-0",
     "vue-sweetalert2": "^5.0.2",
     "vue3-dropzone": "0.0.7",
