--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-VUE_APP_API_URL=http://127.0.0.1:8000/api/v1/
-VUE_APP_WS_URL=http://127.0.0.1:8000
+VUE_APP_API_URL=https://backend-eventmovile.aicode-test.art/api/v1/
+VUE_APP_WS_URL=https://backend-eventmovile.aicode-test.art
 VUE_APP_URL_FRONT=http://localhost:8080/#/
 VUE_APP_WS_PORT=443
 VUE_APP_WS_ENCRYPTED=true
-VUE_APP_ZOOM_IFRAME=http://127.0.0.1:8000/api/v1
+VUE_APP_ZOOM_IFRAME=https://backend-eventmovile.aicode-test.art/api/v1
 VUE_APP_API_URL_FILES=https://eventmovil.sfo3.digitaloceanspaces.com/
