--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@meforma/vue-toaster": "^1.3.0",
+    "agora-rtc-sdk": "^3.6.9",
     "axios": "^0.24.0",
     "baguettebox.js": "^1.11.1",
     "core-js": "^3.6.5",
