--- a/package.json
+++ b/package.json
@@ -14,15 +14,24 @@
     "baguettebox.js": "^1.11.1",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.7",
+    "dropzone-vue": "^0.1.11",
+    "filepond": "^4.30.3",
+    "luxon": "^2.3.0",
     "mqtt": "^4.3.4",
     "v-autocomplete": "^1.8.2",
     "vee-validate": "^4.5.7",
     "vue": "^3.0.0",
     "vue-axios": "^3.4.0",
+    "vue-filepond": "^7.0.2",
+    "vue-infinite-loading": "^2.4.5",
     "vue-loading-overlay": "^5.0.3",
+    "vue-luxon": "^0.10.0",
+    "vue-media-recorder": "^0.1.25",
     "vue-qr": "^3.2.4",
     "vue-router": "^4.0.0-0",
     "vue-sweetalert2": "^5.0.2",
+    "vue-toastification": "^2.0.0-rc.5",
+    "vue2-dropzone": "^3.6.0",
     "vue3-dropzone": "0.0.7",
     "vuesax": "^4.0.1-alpha.25",
     "vuex": "^4.0.2",
