--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@meforma/vue-toaster": "^1.3.0",
+    "@vueuse/core": "^7.6.2",
     "agora-rtc-sdk": "^3.6.9",
     "axios": "^0.24.0",
     "baguettebox.js": "^1.11.1",
@@ -16,6 +17,7 @@
     "dayjs": "^1.10.7",
     "dropzone-vue": "^0.1.11",
     "filepond": "^4.30.3",
+    "idle-vue": "^2.0.5",
     "luxon": "^2.3.0",
     "mqtt": "^4.3.4",
     "v-autocomplete": "^1.8.2",
