--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vue-toastification": "^2.0.0-rc.5",
     "vue2-dropzone": "^3.6.0",
     "vue3-dropzone": "0.0.7",
+    "vue3-qrcode-reader": "0.0.1",
     "vuesax": "^4.0.1-alpha.25",
     "vuex": "^4.0.2",
     "vuex-persist": "^3.1.3"
