--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "idle-vue": "^2.0.5",
     "luxon": "^2.3.0",
     "mqtt": "^4.3.4",
+    "nekoo_vue_swipemodal": "^2.0.4",
     "uuid": "^8.3.2",
     "v-autocomplete": "^1.8.2",
     "vee-validate": "^4.5.7",
