--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "@meforma/vue-toaster": "^1.3.0",
+    "@ts-pro/vue-eternal-loading": "^1.2.0",
+    "@vuelidate/core": "^2.0.0-alpha.34",
+    "@vuelidate/validators": "^2.0.0-alpha.26",
     "@vueuse/core": "^7.6.2",
     "agora-rtc-sdk": "^3.6.9",
     "axios": "^0.24.0",
@@ -37,8 +40,8 @@
     "vue-toastification": "^2.0.0-rc.5",
     "vue2-dropzone": "^3.6.0",
     "vue3-dropzone": "0.0.7",
-    "vue3-qrcode-reader": "0.0.1",
     "vue3-flip-countdown": "^0.1.6",
+    "vue3-qrcode-reader": "0.0.1",
     "vuesax": "^4.0.1-alpha.25",
     "vuex": "^4.0.2",
     "vuex-persist": "^3.1.3"
