--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
     "vue-toastification": "^2.0.0-rc.5",
     "vue2-dropzone": "^3.6.0",
     "vue3-dropzone": "0.0.7",
-    "vue3-qrcode-reader": "0.0.1",
     "vue3-flip-countdown": "^0.1.6",
+    "vue3-qrcode-reader": "0.0.1",
+    "vue3-table-lite": "^1.1.7-1",
     "vuesax": "^4.0.1-alpha.25",
     "vuex": "^4.0.2",
     "vuex-persist": "^3.1.3"
